ArgoCD/Platform/prod/argocd-platform-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: eip-elb-prod-argocd-server
    networking.gke.io/v1beta1.FrontendConfig: "frontendconfig-argocd-server"
    ingress.gcp.kubernetes.io/pre-shared-cert: "SELF_SIGNED_CERT"
  labels:
    env: prod
    platform: platform
    region: asia-northeast3
    service: argocd    
  name: elb-mkt-prod-platform-argocd
  namespace: argocd-system
spec:
  rules:
  - host: ARGOCD_HOST
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: "/"
        #pathType: ImplementationSpecific
        pathType: Prefix

---
